--- a/CarShop/pom.xml
+++ b/CarShop/pom.xml
@@ -14,4 +14,13 @@
         <maven.compiler.target>14</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>11.0.2</version>
+        </dependency>
+
+    </dependencies>
+
 </project>
